# matching-engine

./: CMakeLists.txt  README.md  main.cpp
include/: IngressBuffer.h  Level.h  Order.h  OrderBook.h  OrderIdManager.h  Trade.h
include/order-book/: OrderBook.h
src/ingress-buffer/: IngressBuffer.cpp
src/order-book/: OrderBook.cpp
src/order-id-manager/: OrderIdManager.cpp
tests/: OrderBook.cpp  OrderIdManager.cpp
